# rag-llm

./: .coveragerc  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Dockerfile  ENHANCEMENT_SUMMARY.md  RAG_CHAT_COMPLETIONS_IMPLEMENTATION.md  README.md  README_ENHANCED_CHAT.md  debug_search.py  docker-compose.yml  enhanced_chat_completion_e2e_results_20250728_163558.json  enhanced_chat_completion_e2e_results_20250728_163851.json  enhanced_chat_completion_e2e_results_20250728_170135.json  enhanced_chat_completion_e2e_results_20250728_173545.json  enhanced_chat_e2e_report_20250728_163558.md  enhanced_chat_e2e_report_20250728_163851.md  enhanced_chat_e2e_report_20250728_170135.md  enhanced_chat_e2e_report_20250728_173545.md  env.example  persona_preservation_test_results_20250804_174835.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  test_apis.py  test_cert_config.py  test_rag_with_data.py
app/: __init__.py  main.py
config/: env.example  pytest.ini
doc/: enhanced_chat_completion_enhancements.md  parallel_processing_implementation.md
docs/: README.md
examples/: enhanced_chat_environment_config_example.py  inhouse_embedding_usage.py  inhouse_llm_usage.py
scripts/: cleanup_reports.py  debug_cache_integration.py  debug_context_aware_upload.py  deploy.sh  final_integration_test_results.md  fix_api_tests.py  fix_async_tests.py  quick_test_upload.py  remaining_tests_analysis.md  run.py  run_e2e_tests.py  run_enhanced_chat_e2e_tests.py  run_integration_tests.py  run_tests.py  run_working_tests.py  test_all_provider_logging.py  test_analysis.py  test_clear_refactor.py  test_connection_pooling.py  test_context_aware_upload.py  test_document_upload.py  test_docx_ocr.py  test_enhanced_error_logging.py  test_fix_summary.md  test_inhouse_logging.py  test_logging.py  test_logging_debugging.py  test_logging_improvements.py  test_metadata_transparency.py  test_ocr.py  test_ocr_simple.py  test_persona_preservation.py  test_persona_preservation_fix.py  test_persona_simple.py  test_phase1_logging_complete.py  test_plugin_architecture.py  test_production_error_logging.py  test_production_safety.py  test_rag_context_quality.py  test_summary.md  (+1 more)
src/: __init__.py  config.py  document_loader.py  (+5 more)
(+202 files in other folders)
